cabal-version: 1.12

name:               Rullo
version:            0.1.0.0
homepage:           https://www.github.com/rafalexbar/Rullo
author:             Rafael Barbosa
copyright:          2019 Rafael Barbosa
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

executable Rullo.exe
    hs-source-dirs:   src
    main-is:          Rullo.hs
    ghc-options:      -main-is Rullo
    default-language: Haskell2010
    build-depends:    base >= 4.7 && < 5
